fixed layout issues with mobile header and sidebar

--- a/apps/gym/src/components/reusable/LayoutWrappers/BodyWrapper/BodyWrapper.module.css
+++ b/apps/gym/src/components/reusable/LayoutWrappers/BodyWrapper/BodyWrapper.module.css
@@ -10,3 +10,10 @@
   position: absolute;
   inset: 0 0 0 auto;
 }
+
+@media (width < 480px) {
+  .inner {
+    width: 100vw;
+    height: 100vh;
+  }
+}
